<resources>
    <string name="app_name">Xer</string>
    <string name="FACEBOOK_APP_ID">1605599286152414</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">d76106a1ecd547add72910031fef71c3</string>
    <string name="ak_login_protocol_scheme">ak1605599286152414</string>
    <string name="fb_login_protocol_scheme">fb1605599286152414</string>
    //LoginActivity
    <string name="accountkit_button_label">CONTINUE</string>
    <string name="login_label">Email or Phone Number</string>
    //AccountActivity
    <string name="account">Account</string>
    <string name="sex_label">性別 : </string>
    <string name="name_label">姓名 : </string>
    <string name="name">姓 名</string>
    <string name="stuID_label">學號 :</string>
    <string name="stuID">學 號</string>
    <string name="logout_label">Log Out</string>
    <string name="phone_label">手機 :</string>
    <string name="phone">手 機 號 碼</string>
    <string name="email_label">Email :</string>
    <string name="email">Email</string>
    <string name="submit">下一步</string>
    <string name="account_back">返回</string>
    <string name="account_finish">註冊</string>
    <string name="account_ezcard">悠 遊 卡 卡 號</string>


    //friendsActivity
    <string name="permission_message">AP requires permission to access your Facebook friend list to use Find Friends</string>
    <string name="friend">friend</string>
    //navigation
    <string name="view_one">Xocial Media</string>
    <string name="view_two">Xer 護 照</string>
    <string name="view_three">即 時 查 詢(無用)</string>
    <string name="view_fore">推 薦 菜 單(無用)</string>
    <string name="view_five">Xer 檔 案</string>
    <string name="view_six">Xer 英 雄 榜</string>
    <string name="view_seven">登 出</string>
    <string name="view_eight">Xer 戰 友</string>
    <string name="reserve">X 計 劃</string>
    //bottom nav
    <string name="bottom_nav_reserve">預約器材</string>
    <string name="bottom_nav_group">揪團</string>
    <string name="bottom_nav_start">開始運動</string>


    <string name="open_navigation">hi</string>
    <string name="close_navigation">bye</string>
    <string name="ok">確定</string>
    <string name="cancel">取消</string>

    <!--group-->
    <string name="picktime">請選擇時間</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add">+1</string>
    <string name="gname">揪團人</string>
    <string name="type">運動種類</string>
    <string name="time">時間</string>
    <string name="place">地點</string>
    <string name="gnumber">本團人數</string>
    <string name="remain">剩餘人數</string>
    <string name="title_activity_add_group">AddGroupActivity</string>
    <string name="findOne">找一個</string>
    <string name="createOne">揪一個</string>
    <string name="pleasechoose">尚未選擇時間</string>

    <!--menu-->
    <string name="gym">重訓室</string>
    <string name="others">其他</string>
    <string name="postbtn">分享</string>

    <!--indoor-->
    <string name="scan_barcode_button">掃描器材上的QRcode</string>
    <string name="no_barcode_captured">無感應到ＱR code</string>
    <string name="barcode_error_format">"Error reading barcode: %1$s"</string>
    <string name="start_exercise">Start Exercise</string>

    <!-- Strings related to start exercise1 -->
    <string name="timerVal">00:00:00</string>
    <string name="pauseBtnLabel">Pause</string>
    <string name="startBtnLabel">Start</string>
    <string name="stopBtnLabel">Stop</string>

    <!--Random Strings-->
    <string name="gallery">GALLERY</string>
    <string name="photo">PHOTO</string>
    <string name="string_open_camera">Open Camera</string>
    <string name="string_next">Next</string>

    <!--Intent Extras-->
    <string name="selected_image">selected_image</string>
    <string name="string_share">share</string>
    <string name="selected_bitmap">selected_bitmap</string>

    <!--outdoor-->
    <string name="title_activity_maps">NewXer</string>
    <string name="start">開始運動</string>
    <string name="outdoor_place">您選擇的位置：</string>
    <string name="chosseplace">您選擇的運動：</string>
    <string name="question">請問您今日要做什麽運動？</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!--strings for rank spinner-->
    <string-array name="sports">
        <item>跑步</item>
        <item>籃球</item>
        <item>排球</item>
        <item>羽球</item>
        <item>棒球</item>
        <item>網球</item>
        <item>桌球</item>
    </string-array>
    <string name="choose_a_sport">選擇一項運動</string>
    <string name="reserve_date">4月27日</string>
    <string name="x_duration">30分鐘</string>
    <string name="x_equip">跑步機</string>
    <string name="home2content">Stanley開始在體育館運動</string>
    <string name="home2Date">11.05 14:07</string>
    <string name="encouragement">本次運動向你發射x光波的人有:</string>
    <string name="start_exercise_status">按下起始鍵動起來吧！</string>


</resources>


