<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        app:cardBackgroundColor="#FFB800"
        app:cardCornerRadius="5dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:background="#FFFFFF">

        </FrameLayout>

        <RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textUname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/mGDate"
                android:layout_alignTop="@+id/join_button"
                android:text="TextView"
                android:textSize="16sp" />

            <Button
                android:id="@+id/join_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="51dp"
                android:layout_marginTop="24dp"
                android:layout_toEndOf="@+id/mGType"
                android:background="@drawable/cardview_button"
                android:text="@string/add"
                android:textColor="#FFB800" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="80dp"
                android:layout_height="25dp"
                android:layout_alignBaseline="@+id/mGName"
                android:layout_alignBottom="@+id/mGName"
                android:layout_alignParentStart="true"
                android:layout_marginStart="31dp"
                android:text="@string/gname"
                android:textColor="#FFFFFF"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="105dp"
                android:layout_height="25dp"
                android:layout_alignStart="@+id/textView"
                android:layout_below="@+id/textView"
                android:text="@string/type"
                android:textColor="#FFFFFF"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="75dp"
                android:layout_height="25dp"
                android:layout_alignStart="@+id/textView2"
                android:layout_below="@+id/textView2"
                android:text="@string/time"
                android:textColor="#FFFFFF"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="75dp"
                android:layout_height="25dp"
                android:layout_alignStart="@+id/textView3"
                android:layout_below="@+id/textView3"
                android:text="@string/place"
                android:textColor="#FFFFFF"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="110dp"
                android:layout_height="25dp"
                android:layout_alignStart="@+id/textView4"
                android:layout_below="@+id/textView4"
                android:text="@string/gnumber"
                android:textColor="#FFFFFF"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="110dp"
                android:layout_height="25dp"
                android:layout_alignStart="@+id/textView5"
                android:layout_below="@+id/textView5"
                android:text="@string/remain"
                android:textColor="#FFFFFF"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/mGNumber"
                android:layout_width="75dp"
                android:layout_height="25dp"
                android:layout_alignBaseline="@+id/textView5"
                android:layout_alignBottom="@+id/textView5"
                android:layout_toEndOf="@+id/textView5"
                android:text="TextView"
                android:textColor="#FFFFFF"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/mGPlace"
                android:layout_width="75dp"
                android:layout_height="25dp"
                android:layout_below="@+id/textView3"
                android:layout_toEndOf="@+id/textView3"
                android:text="TextView"
                android:textColor="#FFFFFF"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/mGRemain"
                android:layout_width="75dp"
                android:layout_height="25dp"
                android:layout_below="@+id/textView5"
                android:layout_toEndOf="@+id/textView6"
                android:text="TextView"
                android:textColor="#FFFFFF"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/mGDate"
                android:layout_width="230dp"
                android:layout_height="25dp"
                android:layout_below="@+id/mGType"
                android:layout_toEndOf="@+id/textView3"
                android:text="TextView"
                android:textColor="#FFFFFF"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/mGType"
                android:layout_width="100dp"
                android:layout_height="25dp"
                android:layout_below="@+id/mGName"
                android:layout_toEndOf="@+id/textView2"
                android:text="TextView"
                android:textColor="#FFFFFF"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/mGName"
                android:layout_width="200dp"
                android:layout_height="25dp"
                android:layout_below="@+id/join_button"
                android:layout_marginTop="18dp"
                android:layout_toEndOf="@+id/textView"
                android:text="TextView"
                android:textColor="#FFFFFF"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_alignParentTop="true"
                android:layout_alignStart="@+id/textView"
                android:layout_marginTop="10dp"
                app:srcCompat="@drawable/user" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>