<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="center"
        android:layout_margin="5dp">
        <!--android:cardBackgroundColor="@color/colorWhite"-->
        <!--android:cardCornerRadius="5dp"-->

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:background="@drawable/background_gradient">

        </FrameLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textUname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="22dp"
                android:layout_toEndOf="@+id/textView3"
                android:letterSpacing="0.1"
                android:text="TextView"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"
                android:textStyle="bold" />

            <!--android:textColor="#FFB800" -->


            <TextView
                android:id="@+id/textView"
                android:layout_width="80dp"
                android:layout_height="25dp"
                android:layout_alignBaseline="@+id/uName"
                android:layout_alignBottom="@+id/uName"
                android:layout_alignParentStart="true"
                android:layout_marginStart="32dp"
                android:text="@string/gname"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="105dp"
                android:layout_height="25dp"
                android:layout_alignStart="@+id/textView"
                android:layout_below="@+id/textView"
                android:layout_marginTop="5dp"
                android:text="@string/type"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="75dp"
                android:layout_height="25dp"
                android:layout_alignStart="@+id/textView2"
                android:layout_below="@+id/textView2"
                android:layout_marginTop="5dp"
                android:text="@string/time"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="75dp"
                android:layout_height="25dp"
                android:layout_alignStart="@+id/textView3"
                android:layout_below="@+id/textView3"
                android:layout_marginTop="5dp"
                android:text="@string/place"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="110dp"
                android:layout_height="25dp"
                android:layout_alignStart="@+id/textView4"
                android:layout_below="@+id/textView4"
                android:layout_marginTop="5dp"
                android:text="@string/gnumber"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="110dp"
                android:layout_height="25dp"
                android:layout_alignStart="@+id/textView5"
                android:layout_below="@+id/textView5"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/remain"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/mGNumber"
                android:layout_width="75dp"
                android:layout_height="25dp"
                android:layout_alignBaseline="@+id/textView5"
                android:layout_alignBottom="@+id/textView5"
                android:layout_alignStart="@+id/mGPlace"
                android:text="TextView"
                android:textColor="#000000"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/mGPlace"
                android:layout_width="75dp"
                android:layout_height="25dp"
                android:layout_above="@+id/textView5"
                android:layout_alignStart="@+id/c_constraint"
                android:text="TextView"
                android:textColor="#000000"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/mGRemain"
                android:layout_width="75dp"
                android:layout_height="25dp"
                android:layout_alignBaseline="@+id/textView6"
                android:layout_alignBottom="@+id/textView6"
                android:layout_toEndOf="@+id/textView2"
                android:text="TextView"
                android:textColor="#000000"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/c_constraint"
                android:layout_width="230dp"
                android:layout_height="25dp"
                android:layout_alignBaseline="@+id/textView3"
                android:layout_alignBottom="@+id/textView3"
                android:layout_toEndOf="@+id/textView2"
                android:text="TextView"
                android:textColor="#000000"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/c_number"
                android:layout_width="100dp"
                android:layout_height="25dp"
                android:layout_alignBaseline="@+id/textView2"
                android:layout_alignBottom="@+id/textView2"
                android:layout_alignStart="@+id/uName"
                android:text="TextView"
                android:textColor="#000000"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/uName"
                android:layout_width="200dp"
                android:layout_height="25dp"
                android:layout_below="@+id/textUname"
                android:layout_marginTop="46dp"
                android:layout_toEndOf="@+id/textView2"
                android:text="TextView"
                android:textColor="#000000"
                android:textSize="12sp" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>